gcc/testsuite/rust/rustc/ui/empty/empty-linkname_dg.rs
#[link(name = "")] // { dg-error ".E0454." "" { target *-*-* } }
extern "C" {}

fn main() {}

